# security-atlas

./: .dockerignore  .editorconfig  .gitguardian.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  codecov.yml  go.mod  go.sum  go.work.sum  justfile  package-lock.json  package.json  pyproject.toml  release-please-config.json  sqlc.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  branch-protection.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  container-publish.yml  (+5 more)
.understand-anything/: .understandignore  fingerprints.json  meta.json
Plans/: ARCHITECTURE_CANVAS.md  EVIDENCE_SDK.md  UCF_GRAPH_MODEL.md
cmd/: README.md
connectors/: README.md
deploy/: README.md
docs/: RELEASE_READINESS.md  SELF_HOSTING.md  coverage-audit-2026-05-round-3.md  coverage-audit-2026-05.md  fix-forward-rate.md  flake-budget-dashboard.md  flake-budget.md  observability.md  openapi.yaml  releases.md  responsive-audit.md
docs-site/: mkdocs.yml  requirements.txt
internal/: README.md
migrations/: README.md  atlas.hcl
oscal-bridge/: README.md  pyproject.toml
oscal-bridge/atlas_oscal_bridge/: __init__.py  oscal_pb2.py  oscal_pb2_grpc.py  serializer.py  server.py
oscal-bridge/scripts/: gen_proto.sh
oscal-bridge/tests/: test_import_catalog.py  test_import_component_definition.py  test_import_profile.py  test_serializer.py  test_server.py
oscal-bridge/tests/fixtures/: catalog_with_href.json  component_definition.json  component_definition_external_href.json  profile_baseline.json  profile_chained_entry.json  profile_intermediate.json  profile_malformed.json
pkg/: README.md
policies/: README.md
proto/: README.md
schemas/: README.md
scripts/: actionlint-fixture-invalid-scope.yml  apply-branch-protection.sh  assertion-density.sh  assertion-density_test.sh  audit-deps-phantom-baseline.tsv  audit-deps.sh  audit-deps_test.sh  audit-integration-enrolment.sh  audit-integration-enrolment_test.sh  audit-rls.sh  check-action-pins.sh  check-action-pins_test.sh  check-actionlint-fixture.sh  check-branch-protection-drift.sh  check-branch-protection-drift_test.sh  check-config-reference-drift.sh  check-config-reference-drift_test.sh  check-coverage-excludes.sh  check-coverage-excludes_test.sh  check-integration-seed-order-independence.sh  check-integration-seed-order-independence_test.sh  check-integration-shard-coverage.sh  check-integration-shard-coverage_test.sh  check-openapi-drift.sh  check-schema-removal-age.sh  check-schema-removal-age_test.sh  check-staged-cache-paths.sh  check-staged-cache-paths_test.sh  check-status-drift.sh  edge-image-cleanup.sh  flake-counter.sh  flake-counter_test.sh  gen-metrics-reference.sh  gen-status.sh  gen-status_test.sh  install.sh  install_test.sh  integration-shards.txt  measure-integration-wallclock.sh  measure-integration-wallclock_test.sh  (+3 more)
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/pyatlas/: __init__.py  oauth.py
sdk/python/tests/: test_oauth.py
web/: README.md  coverage-thresholds.json  eslint.config.mjs  next-config.test.ts  next.config.ts  package.json  playwright.config.ts  proxy.test.ts  proxy.ts  testing.md  tsconfig.json  tsconfig.test.json  vitest.config.ts
(+4252 files in other folders)
