[project]
name = "security-atlas-monorepo"
version = "0.0.0"
description = "security-atlas — open-source GRC platform (monorepo root)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["oscal-bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated gRPC stubs (slice 030) are machine-emitted by
# `oscal-bridge/scripts/gen_proto.sh` from proto/oscal/v1/oscal.proto.
# They are not hand-maintained and must not be linted or reformatted —
# the regen script overwrites them verbatim.
extend-exclude = [
    "oscal-bridge/atlas_oscal_bridge/oscal_pb2.py",
    "oscal-bridge/atlas_oscal_bridge/oscal_pb2_grpc.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
