[project]
name = "atlas-oscal-bridge"
version = "0.1.0"
description = "OSCAL serialization bridge wrapping IBM compliance-trestle, exposed to the Go platform over gRPC (slice 030)."
requires-python = ">=3.11"
dependencies = [
    # IBM compliance-trestle — the OSCAL SDK. Pinned to a 4.0.x line:
    # trestle 4.0.2 ships the OSCAL 1.1.x-compatible pydantic models
    # (its OSCAL_VERSION constant is 1.2.1, a superset of 1.1.x; the
    # bridge stamps documents with the 1.1.2 oscal-version the platform
    # commits to in canvas §3.4 — see the slice-030 decisions log).
    "compliance-trestle>=4.0.2,<4.1.0",
    # gRPC runtime. grpcio-tools is build-time only (codegen) but kept
    # here so `uv sync` gives a hermetic dev env that can regenerate the
    # _pb2 stubs.
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas_oscal_bridge"]
