[project]
name = "pyatlas"
version = "0.1.0"
description = "security-atlas Python SDK — OAuth client_credentials helper (slice 191)."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "security-atlas maintainers" }]
readme = "README.md"

# Slice 191 keeps the dependency footprint to the Python standard
# library only. urllib (urllib.request, urllib.parse, urllib.error)
# handles the single HTTP round-trip to /oauth/token; threading.Lock
# guards the cache. A future slice can graduate to httpx when the
# evidence-push surface lands and async support becomes useful.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
